--- a/melhor_grupo/data_exploration (1).ipynb
+++ b/melhor_grupo/data_exploration (1).ipynb
@@ -651,12 +651,147 @@
   {
    "cell_type": "markdown",
    "id": "cb4b4fcd-b4ae-4c19-9366-67bac133bc1e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### Conclusions from datafram description of numerical values:\n",
     "1. The column **Discount** is between 0 and 0.85, indicating it represents a percentage.\n",
     "2. The column **Profit** represents an nominal value that can be negative. It has a very broad range of values.\n",
     "3. The max quantity of items in each row is 14, yet the value in **Sales** has a very broad range, meaning the price of individual products is very diverse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f6b428b-12ad-4e05-8ff4-4de97087deca",
+   "metadata": {},
+   "source": [
+    "##### Análise da quantidade de elementos distintos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42d213da-1eca-450a-a076-1098e2cb295c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Order ID          25035\n",
+       "Order Date         1430\n",
+       "Ship Date          1464\n",
+       "Ship Mode             4\n",
+       "Customer ID        1590\n",
+       "Customer Name       795\n",
+       "Segment               3\n",
+       "City               3636\n",
+       "State              1094\n",
+       "Country             147\n",
+       "Postal Code         631\n",
+       "Market                7\n",
+       "Region               13\n",
+       "Product ID        10292\n",
+       "Category              3\n",
+       "Sub-Category         17\n",
+       "Product Name       3781\n",
+       "Sales             22967\n",
+       "Quantity             14\n",
+       "Discount             27\n",
+       "Profit            24523\n",
+       "Shipping Cost     10037\n",
+       "Order Priority        4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can ignore NaN values\n",
+    "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "643983d3-7e1f-4054-8b42-eeb6e143c540",
+   "metadata": {},
+   "source": [
+    "##### Verificação se o dataset tem linhas duplicadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "148ab14c-75cf-43f9-a93b-4e5e0a2080d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "311bcadd-8029-48c3-8c50-babd412e1b4e",
+   "metadata": {},
+   "source": [
+    "##### Análise de colunas com valores nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fbc38d6f-3c5b-454f-a2f1-8c255bf19ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de valores nulos \n",
+      "Order ID              0\n",
+      "Order Date            0\n",
+      "Ship Date             0\n",
+      "Ship Mode             0\n",
+      "Customer ID           0\n",
+      "Customer Name         0\n",
+      "Segment               0\n",
+      "City                  0\n",
+      "State                 0\n",
+      "Country               0\n",
+      "Postal Code       41296\n",
+      "Market                0\n",
+      "Region                0\n",
+      "Product ID            0\n",
+      "Category              0\n",
+      "Sub-Category          0\n",
+      "Product Name         39\n",
+      "Sales                90\n",
+      "Quantity             90\n",
+      "Discount             90\n",
+      "Profit               90\n",
+      "Shipping Cost        90\n",
+      "Order Priority       90\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total de valores nulos \")\n",
+    "print(df.isnull().sum())"
    ]
   },
   {
@@ -677,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "2cd8df38-ec4e-42cd-9f0a-1acc38103c12",
    "metadata": {},
    "outputs": [
@@ -705,7 +840,6 @@
     "    x = data_agg[cols[k]]\n",
     "    y = data_agg[0]\n",
     "    ypos = np.arange(len(x))\n",
-    "    #ypos = np.arange(len(x))\n",
     "    ax = fig.add_subplot(fig_nr_rows, fig_nr_columns, k+1)\n",
     "    plt.subplots_adjust(hspace=0.3, wspace=0.2)\n",
     "    ax.bar(ypos, y)\n",
@@ -735,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "0531c717-d6ec-472c-8056-9531780e3c4d",
    "metadata": {},
    "outputs": [
@@ -778,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "f55e4bba-75c4-4816-9cd4-ace0242c896b",
    "metadata": {},
    "outputs": [
@@ -797,27 +931,6 @@
    ],
    "source": [
     "def is_outlier(points, thresh=3.5):\n",
-    "    \"\"\"\n",
-    "    Returns a boolean array with True if points are outliers and False \n",
-    "    otherwise.\n",
-    "\n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "        points : An numobservations by numdimensions array of observations\n",
-    "        thresh : The modified z-score to use as a threshold. Observations with\n",
-    "            a modified z-score (based on the median absolute deviation) greater\n",
-    "            than this value will be classified as outliers.\n",
-    "\n",
-    "    Returns:\n",
-    "    --------\n",
-    "        mask : A numobservations-length boolean array.\n",
-    "\n",
-    "    References:\n",
-    "    ----------\n",
-    "        Boris Iglewicz and David Hoaglin (1993), \"Volume 16: How to Detect and\n",
-    "        Handle Outliers\", The ASQC Basic References in Quality Control:\n",
-    "        Statistical Techniques, Edward F. Mykytka, Ph.D., Editor. \n",
-    "    \"\"\"\n",
     "    if len(points.shape) == 1:\n",
     "        points = points[:,None]\n",
     "    median = np.median(points, axis=0)\n",
@@ -862,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "65492fb8-acd9-4fbd-8bd1-98f0ff305fcb",
    "metadata": {},
    "outputs": [
@@ -870,9 +983,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_15688\\2149925844.py:30: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_13152\\1600827358.py:9: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  modified_z_score = 0.6745 * diff / med_abs_deviation\n",
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_15688\\2149925844.py:30: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_13152\\1600827358.py:9: RuntimeWarning: invalid value encountered in true_divide\n",
       "  modified_z_score = 0.6745 * diff / med_abs_deviation\n"
      ]
     },
@@ -924,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "31ae3441-f74f-43a1-aca3-dcaa7c971d00",
    "metadata": {},
    "outputs": [
@@ -975,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "31e6f408-6309-4c89-b88a-c4d9f20e8728",
    "metadata": {},
    "outputs": [
@@ -985,7 +1098,7 @@
        "Text(0, 0.5, 'Avg Nr Orders')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1019,19 +1132,7 @@
     "plt.bar(ypos, y)\n",
     "plt.xticks(ypos, x)\n",
     "plt.title(\"Average number of Orders by Month\", fontweight='bold')\n",
-    "plt.ylabel(\"Avg Nr Orders\")\n",
-    "\n",
-    "#data_agg = df.groupby([\"Order Weekday\"])[\"Order ID\"].mean().reset_index()\n",
-    "#\n",
-    "#x = data_agg[\"Order Weekday\"]\n",
-    "#y = data_agg[\"Order ID\"]\n",
-    "#ypos = np.arange(len(x))\n",
-    "#ax = fig.add_subplot(1, 2, 2)\n",
-    "#plt.bar(ypos, y)\n",
-    "#plt.xticks(ypos, x)\n",
-    "#plt.title(\"Average number of Orders by Month\", fontweight='bold')\n",
-    "#plt.ylabel(\"Avg Nr Orders\")\n",
-    "#plt.show()"
+    "plt.ylabel(\"Avg Nr Orders\")"
    ]
   },
   {
@@ -1044,29 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac17db5b-9727-4622-88a8-484f9e11c843",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "528a71e9-1b91-4792-bf8d-29e34ec1728d",
-   "metadata": {},
-   "source": [
-    "Analisando cada uma das colunas:\n",
-    "- Quantity, faz sentido juntar os que estão no máximo, a partir do 10.\n",
-    "- Discount, faz sentido fazer bins por regiões, tipo 0 a 0.2, 0.2 a 0.4, ... Assim não perdemos muita informação.\n",
-    "- Profit, remover outliers, acho.\n",
-    "- Shipping cost, meter mais de 200 para uma categoria.\n",
-    "\n",
-    "Postal code não devia ser visto assim :)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "b96dc9af-bd1a-457a-b0cc-bdf37f04ddd1",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1155,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1099,32 +1178,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c27ba611-deeb-4eaf-a16b-4fca8b1aaa2c",
-   "metadata": {},
-   "source": [
-    "Como podemos ver, existe bastante correlação entre o shipping cost e as sales, logo provavelmente poderemos remover uma das colunas. \n",
-    "Depois de converter colunas, e converter algumas para números, talvez voltar a relacionar.\n",
-    "\n",
-    "É preciso normalizar para meter na matriz? :eyes:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b6be17a-0d6e-46f6-a554-90504ea1f80b",
-   "metadata": {},
-   "source": [
-    "### Pela análise dos gráficos:\n",
-    "- Postal code: É ignorar\n",
-    "- Sales : Ou dividimos por bins, ou removemos outilers, mas são demasiados\n",
-    "- Quantity remover outliers superiores\n",
-    "- Discount igual\n",
-    "- Profit, aproveitar para analisar que se calhar é normalizado"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "0b197312-65ee-40ee-a30c-d8fd9931db0c",
    "metadata": {},
    "outputs": [
@@ -1152,13 +1207,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c170552-075d-4396-a1ff-c78bd762c7bc",
+   "metadata": {},
+   "source": [
+    "##### Extrair dia, mês e ano das features de datas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "463776ba-b51f-4899-a3e0-e489e72fb33d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tratar das datas\n",
     "data2 = df\n",
     "\n",
     "if \"Order Date\" in data2:\n",
@@ -1170,7 +1232,6 @@
     "    consider_month = False\n",
     "    consider_day = False\n",
     "    \n",
-    "# Converter datas, acho que já está feito em cima, depois confirmar\n",
     "dates_order = DatetimeIndex(pd.to_datetime(data2['Order Date'],format='%d-%m-%Y', errors='coerce'))\n",
     "dates_ship = DatetimeIndex(pd.to_datetime(data2['Ship Date'],format='%d-%m-%Y', errors='coerce'))\n",
     "if consider_year : \n",
@@ -1192,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "9660fe4d-0cc7-4de6-a10f-c35140801ee3",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1274,6 @@
     "\n",
     "colors=['gold', 'magenta','lightskyblue', 'yellowgreen']\n",
     "\n",
-    "# estamos a agrupar por year order e a contar o numero de order id. O reset index é para tirar o year_order de index e voltar a ser 0,1,2,3,4\n",
     "data = df.groupby(['Year_order'])['Order ID'].count().reset_index()\n",
     "\n",
     "plt.pie(data['Order ID'], labels = data['Year_order'], colors = colors, autopct='%.0f%%')\n",
@@ -1221,16 +1281,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "58bafb30-ebc6-4ca7-97f6-a15fdea42ab7",
-   "metadata": {},
-   "source": [
-    "A partir deste gráfico de pizza, podemos retirar que vendas de binders é a maior e venda de tables é a menor na Global Superstore."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "bfe25ca0-244c-4edd-ac1f-255d441c769f",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "b1154dbf-79ca-4170-a38f-c26d8a472afd",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "4c690988-ee2c-48cd-aadc-3e6e547d567e",
    "metadata": {},
    "outputs": [
@@ -1317,14 +1369,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b89ea047-3c14-47a8-8edf-a8838ecd4fee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
